свагер для департаментов
