# backend/internal/handler/department.go
@@ -3,6 +3,7 @@ package handler
 import (
 	"github.com/gofiber/fiber/v2"
 	"net/url"
+	"server/internal/entities"
 	"server/internal/log"
 )
 
@@ -38,4 +39,30 @@ func (h *Handler) GetByUniversityDepartments(c *fiber.Ctx) error {
 		Url: c.OriginalURL(), Status: fiber.StatusOK})
 	logEvent.Msg("success")
 	return c.Status(fiber.StatusOK).JSON(campuses)
+}
+
+// CreateDepartment
+// @Tags         departments
+// @Summary      Create a new department
+// @Description  Creates a new department with the provided details.
+// @Accept       json
+// @Produce      json
+// @Param        data body entities.CreateDepartmentRequest true "Department creation data"
+// @Success      200 {object} entities.CreateDepartmentResponse "Created department details"
+// @Failure      400 {object} map[string]interface{} "Invalid request body"
+// @Failure      500 {object} map[string]interface{} "Internal server error"
+// @Router       /department [post]
+// @Security ApiKeyAuth
+func (h *Handler) CreateDepartment(c *fiber.Ctx) error {
+	var req entities.CreateDepartmentRequest
+	if err := c.BodyParser(&req); err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": err.Error()})
+	}
+
+	res, err := h.services.DepartmentService.Create(c.Context(), &req)
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
+	}
+
+	return c.Status(fiber.StatusOK).JSON(res)
 }
